Updated portfolio modals

--- a/index.html
+++ b/index.html
@@ -904,7 +904,7 @@
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/01-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/personal-website.jpg" alt="">
             </a>
             <div class="card-body">
               <h4 class="card-title">
@@ -912,11 +912,8 @@
               </h4>
               <p class="card-date">Diciembre, 2019</p>
               <hr class="divider">
-              <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam
-                aspernatur eum
-                quasi sapiente nesciunt? Voluptatibus sit, repellat sequi itaque deserunt, dolores in, nesciunt,
-                illum
-                tempora ex quae? Nihil, dolorem!</p>
+              <p class="card-text">Página web personal en la que describo mi formación y habilidades,
+                adjunto mi curriculum y proporciono información de contacto.</p>
             </div>
           </div>
         </div>
@@ -1068,14 +1065,17 @@
 
                 <h2>Landmark Finder</h2>
                 <p class="item-intro text-muted">Aplicación móvil</p>
-                <p>Use this area to describe your project. Lorem ipsum dolor sit amet, consectetur adipisicing
-                  elit. Est
-                  blanditiis dolorem culpa incidunt minus dignissimos deserunt repellat aperiam quasi sunt
-                  officia
-                  expedita beatae cupiditate, maiores repudiandae, nostrum, reiciendis facere nemo!</p>
+                <p>Aplicación móvil que a partir de una imagen reconoce a qué lugar pertenece y
+                  proporciona información del mismo: nombre, ubicación, historia o descripción, galería de imágenes
+                  de ese sitio, horario de apertura si lo tiene y opiniones.</p>
+
+                <p>Para conseguir el reconocimiento del lugar en una imagen se ha utilizado <strong>ML Kit de Firebase</strong>, un conjunto
+                  de herramientas que permiten incoporar características de machine learning a las aplicaciones. Una vez detectado
+                  el lugar, se utilizan varias APIs (Google Places, MediaWiki, Flickr) para recuperar la información de ese sitio.
+
+                </p>
                 <ul class="list-inline">
                   <li>Fecha: Diciembre 2019</li>
-                  <li>Herramientas:</li>
                 </ul>
 
                 <a class="btn btn-git" href="https://github.com/SergioGonzalezVelazquez/CalculadoraRCV" target="_blank">
@@ -1118,7 +1118,6 @@
                 </p>
                 <ul class="list-inline">
                   <li>Fecha: Julio 2019</li>
-                  <li>Herramientas:</li>
                 </ul>
                 <a class="btn btn-git" href="https://github.com/SergioGonzalezVelazquez/ElmCalculator" target="_blank">
                   <i class="fab fa-github"></i>
@@ -1166,7 +1165,6 @@
                 <p><a href="https://serglezv.neocities.org/ELM-Calculator/index.html" target="_blank"></a></p>
                 <ul class="list-inline">
                   <li>Fecha: Junio 2019</li>
-                  <li>Herramientas:</li>
                 </ul>
 
                 <a class="btn btn-git" href="https://github.com/SergioGonzalezVelazquez/FoodFinder" target="_blank">
@@ -1191,32 +1189,11 @@
       <div class="modal-content">
         <div class="container">
           <div class="row">
-            <div id="carouselExampleIndicators3" class="col-12 carousel slide" data-ride="carousel">
-              <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-              </ol>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img class="d-block w-100" src="img/portfolio/02-full.jpg" alt="First slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="img/portfolio/02-full.jpg" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="img/portfolio/02-full.jpg" alt="Third slide">
-                </div>
-              </div>
-              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
-            </div>
+            <video class="d-block w-100" controls>
+              <source src="img/portfolio/foodFinder-video.mp4" type="video/mp4">
+              No se puede reproducir
+            </video>
+
             <div class="col">
               <div class="modal-body">
                 <h2>Calculadora RCV</h2>
@@ -1237,7 +1214,6 @@
                   cardíacas concretas.</p>
                 <ul class="list-inline">
                   <li>Fecha: Abril 2019</li>
-                  <li>Herramientas:</li>
                 </ul>
 
 
@@ -1255,59 +1231,36 @@
   </div>
 
 
-  <!-- Modal Food Finder -->
+  <!-- Modal Personal web site -->
   <div class="portfolio-modal modal fade" id="portfolioModalPersonalWebsite" tabindex="-1" role="dialog"
     aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="container">
           <div class="row">
-            <div id="carouselExampleIndicators5" class="col-12 carousel slide" data-ride="carousel">
-              <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-              </ol>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img class="d-block w-100" src="img/portfolio/02-full.jpg" alt="First slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="img/portfolio/02-full.jpg" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="img/portfolio/02-full.jpg" alt="Third slide">
-                </div>
-              </div>
-              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
-            </div>
+            <img class="d-block w-100" src="img/portfolio/personal-website.jpg" alt="personal website">
             <div class="col">
               <div class="modal-body">
-                <h2>Food Finder</h2>
-                <p class="item-intro text-muted">Aplicación móvil multiplataforma</p>
-                <p>Aplicación móvil de gestión de pedidos y reparto de comida a domicilio.
-                  Desarrollo realizado con el objetivo de aprender la programación Orientada a Widgets de
-                  Flutter en la asignatura <strong>Interacción Persona-Ordenador 2</strong>.
+                <h2>Personal website</h2>
+                <p class="item-intro text-muted">Página web</p>
+                <p>Página web personal en la que describo mi formación y habilidades,
+                  adjunto mi curriculum y proporciono información de contacto. Me he esforzado en conseguir un
+                  <strong>diseño responsive</strong>
+                  para que se vea bien, de manera
+                  independiente al tipo de pantalla desde la que se visite.
                 </p>
-                <p>No se trata de una aplicación completamente funcional, es sólo un <strong>prototipo</strong>
-                  con las
-                  pantallas que formarían
-                  las distintas interfaces de usuario. No obstante, incluye autenticación utilizando OAuth con
-                  Google a
-                  través de
-                  Firebase y persistencia de datos en una base de datos MySQL remota.
+                <p>
+                  También he intentado mejorar el posicionamiento SEO aplicando los contenidos vistos en la asignatura
+                  de
+                  <strong>Comercio Electrónico</strong>. En este sentido, he utilizado una herramienta de analítica web
+                  para tener información
+                  de la audiencia del sitio; he incluído un archivo robots.txt para proporcionar información a los
+                  motores de búsqueda y he añadido
+                  un sitemap para facilitar el rastreo de la página a los buscadores.
                 </p>
                 <p><a href="https://serglezv.neocities.org/ELM-Calculator/index.html" target="_blank"></a></p>
                 <ul class="list-inline">
                   <li>Fecha: Junio 2019</li>
-                  <li>Herramientas:</li>
                 </ul>
 
                 <a class="btn btn-git" href="https://github.com/SergioGonzalezVelazquez/FoodFinder" target="_blank">
@@ -1374,7 +1327,6 @@
                 <p><a href="https://serglezv.neocities.org/ELM-Calculator/index.html" target="_blank"></a></p>
                 <ul class="list-inline">
                   <li>Fecha: Junio 2019</li>
-                  <li>Herramientas:</li>
                 </ul>
 
                 <a class="btn btn-git" href="https://github.com/SergioGonzalezVelazquez/FoodFinder" target="_blank">
