Updated home photo

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       </div>
     </div>
 
-    <img src="img/sergio.png" alt="foto de perfil" class="img-face" data-aos="fade">
+    <img src="img/sergio2.png" alt="foto de perfil" class="img-face" data-aos="fade">
   </header>
 
   <!-- Sobre mí -->
