--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Sobre mí</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h3 class="section-subheading text-muted">"La mayor sabiduría que existe es conocerse a uno mismo." Galileo Galilei</h3>
         </div>
       </div>
       <div class="row ">
@@ -148,10 +148,12 @@
         <div class="col-lg-4 order-2 order-lg-1">
           <p>¡Hola! Soy Sergio González Velázquez, estudiante de Ingeniería Informática
             en la Escuela Superior de Informática de Ciudad Real.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis ipsum
-            error eligendi molestiae eaque quas, ducimus sequi excepturi?</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis ipsum
-            error eligendi molestiae eaque quas, ducimus sequi excepturi?</p>
+          <p>Actualmente estoy cursando el último año de carrera en la intensificación de Tecnologías de la 
+            Información.
+          </p>
+          <p>Me considero una persona organizada, trabajadora y constante, con una gran motivación por seguir
+            aprendiendo y creciendo profesionalmente. 
+          </p>
           <p class="firma"><img src="img/firma.png" alt="firma"></p>
         </div>
         <div class="col-lg-4 order-3 order-lg-3">
@@ -178,7 +180,7 @@
           <h2 class="section-heading text-uppercase">Formación</h2>
           <h3 class="section-subheading text-muted">"La educación necesita tanto de formación técnica, científica y
             profresional
-            como de sueños y utopías"</h3>
+            como de sueños y utopías". Freire</h3>
         </div>
       </div>
       <div class="row">
@@ -367,7 +369,9 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Habilidades</h2>
-          <h3 class="section-subheading text-muted">"El denominador común para el éxito es el trabajo"</h3>
+          <h3 class="section-subheading text-muted">"En muchas cosas de la vida, la laboriosidad puede 
+            conseguir más que el genio".
+          </h3>
         </div>
       </div>
       <div class="row text-center">
@@ -794,7 +798,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Portfolio</h2>
-          <h3 class="section-subheading text-muted">"El denominador común para el éxito es el trabajo"</h3>
+          <h3 class="section-subheading text-muted">"El denominador común para el éxito es el trabajo". John D. Rockefeller</h3>
         </div>
       </div>
 
@@ -815,7 +819,7 @@
                   <i class="fas fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img class="img-fluid" src="img/portfolio/ladnmarkFinder-thumbnail.jpg" alt="">
+              <img class="img-fluid" src="img/portfolio/landmarkFinder-thumbnail.jpg" alt="Landmark Finder">
             </a>
             <div class="card-body">
               <h4 class="card-title">
@@ -972,14 +976,13 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">¡Contacta conmigo!</h2>
-          <hr class="divider my-4">
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <hr class="divider my-4 pb-3">
         </div>
       </div>
       <div class="row">
         <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
           <i class="fas fa-map-marker-alt fa-3x mb-3 text-muted"></i>
-          <a class="d-block" href="http://maps.google.com/?q=Ciudad+Real,España" target="_blank">Ciudad+Real,
+          <a class="d-block" href="http://maps.google.com/?q=Ciudad+Real,España" target="_blank">Ciudad Real,
             España</a>
         </div>
         <div class="col-lg-4 ml-auto text-center mb-5 mb-lg-0">
@@ -1027,39 +1030,14 @@
 
   <!-- Portfolio Modals -->
 
-  <!-- Modal 1 -->
+  <!-- Modal Landmark Finder -->
   <div class="portfolio-modal modal fade" id="portfolioModalLandmarkFinder" tabindex="-1" role="dialog"
     aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="container">
           <div class="row">
-            <div id="carouselExampleIndicators" class="col-12 carousel slide" data-ride="carousel">
-              <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-              </ol>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img class="d-block w-100" src="img/portfolio/02-full.jpg" alt="First slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="img/portfolio/02-full.jpg" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="img/portfolio/02-full.jpg" alt="Third slide">
-                </div>
-              </div>
-              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
-            </div>
+            <img class="d-block w-100" src="img/portfolio/ladnmarkFinder.png" alt="landmark finder">
             <div class="col">
               <div class="modal-body">
 
@@ -1078,7 +1056,7 @@
                   <li>Fecha: Diciembre 2019</li>
                 </ul>
 
-                <a class="btn btn-git" href="https://github.com/SergioGonzalezVelazquez/CalculadoraRCV" target="_blank">
+                <a class="btn btn-git" href="https://github.com/SergioGonzalezVelazquez/landmark_finder" target="_blank">
                   <i class="fab fa-github"></i>
                   Ver repositorio</a>
                 <button class="btn btn-close" data-dismiss="modal" type="button">
@@ -1190,7 +1168,7 @@
         <div class="container">
           <div class="row">
             <video class="d-block w-100" controls>
-              <source src="img/portfolio/foodFinder-video.mp4" type="video/mp4">
+              <source src="img/portfolio/calculadora_rcv.mp4" type="video/mp4">
               No se puede reproducir
             </video>
 
@@ -1263,7 +1241,7 @@
                   <li>Fecha: Junio 2019</li>
                 </ul>
 
-                <a class="btn btn-git" href="https://github.com/SergioGonzalezVelazquez/FoodFinder" target="_blank">
+                <a class="btn btn-git" href="https://github.com/SergioGonzalezVelazquez/sergiogonzalezvelazquez.github.io" target="_blank">
                   <i class="fab fa-github"></i>
                   Ver repositorio</a>
                 <button class="btn btn-close" data-dismiss="modal" type="button">
@@ -1282,54 +1260,25 @@
       <div class="modal-content">
         <div class="container">
           <div class="row">
-            <div id="carouselExampleIndicators4" class="col-12 carousel slide" data-ride="carousel">
-              <ol class="carousel-indicators">
-                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-              </ol>
-              <div class="carousel-inner">
-                <div class="carousel-item active">
-                  <img class="d-block w-100" src="img/portfolio/02-full.jpg" alt="First slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="img/portfolio/02-full.jpg" alt="Second slide">
-                </div>
-                <div class="carousel-item">
-                  <img class="d-block w-100" src="img/portfolio/02-full.jpg" alt="Third slide">
-                </div>
-              </div>
-              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
-            </div>
+            <img class="d-block w-100" src="img/portfolio/capturaInterfaz.jpg" alt="captura interfaz">
             <div class="col">
               <div class="modal-body">
-                <h2>Food Finder</h2>
-                <p class="item-intro text-muted">Aplicación móvil multiplataforma</p>
-                <p>Aplicación móvil de gestión de pedidos y reparto de comida a domicilio.
-                  Desarrollo realizado con el objetivo de aprender la programación Orientada a Widgets de
-                  Flutter en la asignatura <strong>Interacción Persona-Ordenador 2</strong>.
+                <h2>Youtube DL</h2>
+                <p class="item-intro text-muted">Aplicación de escritorio</p>
+                <p>Aplicación de línea de comandos desarrollada en la asignatura <strong>Sistemas Distribuidos</strong> con el de diseñar un sistema
+                   cliente-servidor utilizando el middleware de comunicaciones orientado a objetos ZeroC Ice. El programa permite la 
+                   extracción de ficheros de audio a partir de la URL de clips de YouTube.
                 </p>
-                <p>No se trata de una aplicación completamente funcional, es sólo un <strong>prototipo</strong>
-                  con las
-                  pantallas que formarían
-                  las distintas interfaces de usuario. No obstante, incluye autenticación utilizando OAuth con
-                  Google a
-                  través de
-                  Firebase y persistencia de datos en una base de datos MySQL remota.
+
+                <p>Además, es un sistema escalabe, permitiendo la creación bajo demanda de nuevos servidores encargados de 
+                  las tareas de descarga y extracción de los audios. Estos servidore se interconectan y sincronizan de forma automática 
+                  entre sí, proporcionando de esta manera un sistema de alta disponibilidad.
                 </p>
-                <p><a href="https://serglezv.neocities.org/ELM-Calculator/index.html" target="_blank"></a></p>
                 <ul class="list-inline">
-                  <li>Fecha: Junio 2019</li>
+                  <li>Fecha: Enero 2019</li>
                 </ul>
 
-                <a class="btn btn-git" href="https://github.com/SergioGonzalezVelazquez/FoodFinder" target="_blank">
+                <a class="btn btn-git" href="https://github.com/SergioGonzalezVelazquez/ProyectoSSDD" target="_blank">
                   <i class="fab fa-github"></i>
                   Ver repositorio</a>
                 <button class="btn btn-close" data-dismiss="modal" type="button">
