Added work in progress

--- a/index.html
+++ b/index.html
@@ -1056,9 +1056,7 @@
                   <li>Fecha: Diciembre 2019</li>
                 </ul>
 
-                <a class="btn btn-git" href="https://github.com/SergioGonzalezVelazquez/landmark_finder" target="_blank">
-                  <i class="fab fa-github"></i>
-                  Ver repositorio</a>
+                <img src="img/portfolio/workInProgress.png" style="height: 8em;" alt="work in progress">
                 <button class="btn btn-close" data-dismiss="modal" type="button">
                   <i class="fas fa-times"></i></button>
               </div>
