--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Página web personal de Sergio González Velázquez, alumno de la Escuela Superior de Informática de la Universidad de Castilla-La Mancha">
+  <meta name="keywords" content="software, programación, Gonzalez Velazquez, Ingeniería Informática" />
+  <meta name="author" content="Sergio González Velázquez">
 
   <title>Sergio Gonzalez Velazquez</title>
 
