--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Página web personal de Sergio González Velázquez, alumno de la Escuela Superior de Informática de la Universidad de Castilla-La Mancha">
+  <meta name="description" content="Sergio González Velázquez, alumno de la Escuela Superior de Informática de la Universidad de Castilla-La Mancha">
   <meta name="keywords" content="software, programación, Gonzalez Velazquez, Ingeniería Informática" />
   <meta name="author" content="Sergio González Velázquez">
 
