--- a/index.html
+++ b/index.html
@@ -226,6 +226,7 @@
                     <span class="timeline-company">Universidad de Castilla La Mancha - 2016 - 2020</span>
                   </div>
                   <div class="timeline-body">
+                    <p class="text-muted">Escuela Superior de Informática de Ciudad Real, con Sello de excelencia EURO-INF. </p>
                     <p class="text-muted">Intensificación en Tecnologías de la Información</p>
                     <p class="text-muted">Nota media 8.80</p>
                   </div>
