Cambiado icono correo (G por sobre). Actualizado logo Universidad con referencia a ESI y añadidos enlaces.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Sergio González Velázquez, alumno de la Escuela Superior de Informática de la Universidad de Castilla-La Mancha">
+  <meta name="description"
+    content="Sergio González Velázquez, alumno de la Escuela Superior de Informática de la Universidad de Castilla-La Mancha">
   <meta name="keywords" content="software, programación, Gonzalez Velazquez, Ingeniería Informática" />
   <meta name="author" content="Sergio González Velázquez">
 
@@ -93,7 +94,7 @@
                   <i class="fab fa-linkedin-in"></i>
                 </a>
                 <a class="social-button" href="mailto:serglezv@gmail.com" target="_blank">
-                  <i class="fab fa-google"></i>
+                  <i class="fas fa-envelope"></i>
                 </a>
                 <a class="social-button" href="https://github.com/SergioGonzalezVelazquez" target="_blank">
                   <i class="fab fa-github"></i>
@@ -136,7 +137,8 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Sobre mí</h2>
-          <h3 class="section-subheading text-muted">"La mayor sabiduría que existe es conocerse a uno mismo." Galileo Galilei</h3>
+          <h3 class="section-subheading text-muted">"La mayor sabiduría que existe es conocerse a uno mismo." Galileo
+            Galilei</h3>
         </div>
       </div>
       <div class="row ">
@@ -149,11 +151,11 @@
         <div class="col-lg-4 order-2 order-lg-1">
           <p>¡Hola! Soy Sergio González Velázquez, estudiante de Ingeniería Informática
             en la Escuela Superior de Informática de Ciudad Real.</p>
-          <p>Actualmente estoy cursando el último año de carrera en la intensificación de Tecnologías de la 
+          <p>Actualmente estoy cursando el último año de carrera en la intensificación de Tecnologías de la
             Información.
           </p>
           <p>Me considero una persona organizada, trabajadora y constante, con una gran motivación por seguir
-            aprendiendo y creciendo profesionalmente. 
+            aprendiendo y creciendo profesionalmente.
           </p>
           <p class="firma"><img src="img/firma.png" alt="firma"></p>
         </div>
@@ -200,7 +202,9 @@
             <ul class="timeline pb-lg-4">
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/logos/cambrian.png" alt="Cambrian Intelligence">
+                  <a href="https://cambrianintelligence.com/" target="_blank">
+                    <img class="rounded-circle img-fluid" src="img/logos/cambrian.png" alt="Cambrian Intelligence">
+                  </a>
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -218,7 +222,9 @@
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
-                  <img class="rounded-circle img-fluid" src="img/logos/uclm.jpg" alt="uclm">
+                  <a href="https://esi.uclm.es/" target="_blank">
+                  <img class="rounded-circle img-fluid" src="img/logos/euroinf_uclm.png" alt="esi-uclm">
+                  </a>
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
@@ -226,7 +232,8 @@
                     <span class="timeline-company">Universidad de Castilla La Mancha - 2016 - 2020</span>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Escuela Superior de Informática de Ciudad Real, con Sello de excelencia EURO-INF. </p>
+                    <p class="text-muted">Escuela Superior de Informática de Ciudad Real, con Sello de excelencia
+                      EURO-INF. </p>
                     <p class="text-muted">Intensificación en Tecnologías de la Información</p>
                     <p class="text-muted">Nota media 8.80</p>
                   </div>
@@ -371,7 +378,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Habilidades</h2>
-          <h3 class="section-subheading text-muted">"En muchas cosas de la vida, la laboriosidad puede 
+          <h3 class="section-subheading text-muted">"En muchas cosas de la vida, la laboriosidad puede
             conseguir más que el genio".
           </h3>
         </div>
@@ -800,7 +807,8 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Portfolio</h2>
-          <h3 class="section-subheading text-muted">"El denominador común para el éxito es el trabajo". John D. Rockefeller</h3>
+          <h3 class="section-subheading text-muted">"El denominador común para el éxito es el trabajo". John D.
+            Rockefeller</h3>
         </div>
       </div>
 
@@ -1049,9 +1057,12 @@
                   proporciona información del mismo: nombre, ubicación, historia o descripción, galería de imágenes
                   de ese sitio, horario de apertura si lo tiene y opiniones.</p>
 
-                <p>Para conseguir el reconocimiento del lugar en una imagen se ha utilizado <strong>ML Kit de Firebase</strong>, un conjunto
-                  de herramientas que permiten incoporar características de machine learning a las aplicaciones. Una vez detectado
-                  el lugar, se utilizan varias APIs (Google Places, MediaWiki, Flickr) para recuperar la información de ese sitio.
+                <p>Para conseguir el reconocimiento del lugar en una imagen se ha utilizado <strong>ML Kit de
+                    Firebase</strong>, un conjunto
+                  de herramientas que permiten incoporar características de machine learning a las aplicaciones. Una vez
+                  detectado
+                  el lugar, se utilizan varias APIs (Google Places, MediaWiki, Flickr) para recuperar la información de
+                  ese sitio.
 
                 </p>
                 <ul class="list-inline">
@@ -1241,7 +1252,8 @@
                   <li>Fecha: Junio 2019</li>
                 </ul>
 
-                <a class="btn btn-git" href="https://github.com/SergioGonzalezVelazquez/sergiogonzalezvelazquez.github.io" target="_blank">
+                <a class="btn btn-git"
+                  href="https://github.com/SergioGonzalezVelazquez/sergiogonzalezvelazquez.github.io" target="_blank">
                   <i class="fab fa-github"></i>
                   Ver repositorio</a>
                 <button class="btn btn-close" data-dismiss="modal" type="button">
@@ -1265,13 +1277,17 @@
               <div class="modal-body">
                 <h2>Youtube DL</h2>
                 <p class="item-intro text-muted">Aplicación de escritorio</p>
-                <p>Aplicación de línea de comandos desarrollada en la asignatura <strong>Sistemas Distribuidos</strong> con el de diseñar un sistema
-                   cliente-servidor utilizando el middleware de comunicaciones orientado a objetos ZeroC Ice. El programa permite la 
-                   extracción de ficheros de audio a partir de la URL de clips de YouTube.
+                <p>Aplicación de línea de comandos desarrollada en la asignatura <strong>Sistemas Distribuidos</strong>
+                  con el de diseñar un sistema
+                  cliente-servidor utilizando el middleware de comunicaciones orientado a objetos ZeroC Ice. El programa
+                  permite la
+                  extracción de ficheros de audio a partir de la URL de clips de YouTube.
                 </p>
 
-                <p>Además, es un sistema escalabe, permitiendo la creación bajo demanda de nuevos servidores encargados de 
-                  las tareas de descarga y extracción de los audios. Estos servidore se interconectan y sincronizan de forma automática 
+                <p>Además, es un sistema escalabe, permitiendo la creación bajo demanda de nuevos servidores encargados
+                  de
+                  las tareas de descarga y extracción de los audios. Estos servidore se interconectan y sincronizan de
+                  forma automática
                   entre sí, proporcionando de esta manera un sistema de alta disponibilidad.
                 </p>
                 <ul class="list-inline">
