Updated web page

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <pre id="typewriter">
                 <span class="var-highlight">var</span> me = {
                   <span class="string-type1tab">name:</span> <span class="string-highlight">'Sergio González Velázquez'</span>,
-                  <span class="string-type1tab">type:</span> <span class="string-highlight">'Estudiante de Ingeniería Informática'</span>,
+                  <span class="string-type1tab">type:</span> <span class="string-highlight">'Graduado en Ingeniería Informática'</span>,
                   <span class="string-type1tab">contact: {</span> 
                       <span class="string-type2tab">mail: </span>  <span class="string-highlight">'serglezv@gmail.com'</span>,
                       <span class="string-type2tab">phone: </span> <span class="string-highlight">'+34 664 205 678'</span>,
@@ -149,10 +149,9 @@
 
         </div>
         <div class="col-lg-4 order-2 order-lg-1">
-          <p>¡Hola! Soy Sergio González Velázquez, estudiante de Ingeniería Informática
-            en la Escuela Superior de Informática de Ciudad Real.</p>
-          <p>Actualmente estoy cursando el último año de carrera en la intensificación de Tecnologías de la
-            Información.
+          <p>¡Hola! Soy Sergio González Velázquez, graduado en Ingeniería Informática
+            por la Escuela Superior de Informática de Ciudad Real.</p>
+          <p>Actualmente estoy cursando un máster en Ingeniería y Ciencia de Datos en la UNED.
           </p>
           <p>Me considero una persona organizada, trabajadora y constante, con una gran motivación por seguir
             aprendiendo y creciendo profesionalmente.
@@ -182,60 +181,91 @@
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Formación</h2>
           <h3 class="section-subheading text-muted">"La educación necesita tanto de formación técnica, científica y
-            profresional
-            como de sueños y utopías". Freire</h3>
+            profresional como de sueños y utopías". Freire</h3>
         </div>
       </div>
       <div class="row">
         <div class="col-md-3 hidden-sm-up">
           <nav id="navi">
             <ul>
-              <li><a href="#page-2">Formación y Experiencia</a></li>
+              <li><a href="#page-1">Experiencia</a></li>
+              <li><a href="#page-2">Estudios Oficiales</a></li>
               <li><a href="#page-3">Formación complementaria</a></li>
               <li><a href="#page-4">Premios y reconocimientos</a></li>
             </ul>
           </nav>
         </div>
+
         <div class="col-md-9 col-md-offset-0 pb-2">
-          <div id="page-2" class="page two">
-            <h3 class="heading pt-4 pb-2">Formación y Experiencia</h3>
+          <div id="page-1" class="page two">
+            <h3 class="heading pt-4 pb-2">Experiencia laboral</h3>
             <ul class="timeline pb-lg-4">
               <li class="timeline-inverted">
                 <div class="timeline-image">
                   <a href="https://cambrianintelligence.com/" target="_blank">
-                    <img class="rounded-circle img-fluid" src="img/logos/cambrian.png" alt="Cambrian Intelligence">
+                    <img class="rounded-circle img-fluid" src="img/logos/cambrian.png"
+                      alt="Universidad Nacional de Educación a Distancia">
                   </a>
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h3 class="timeline-title">Beca Desarrollador Full Stack</h3>
-                    <span class="timeline-company">Cambrian Intelligence - Julio 2019 - actualidad</span>
+                    <h5 class="timeline-title">Desarrollador Full Stack</h5>
+                    <span class="timeline-company">Cambrian Intelligence (Julio 2019 - actualidad) </span>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted"> Diseño y desarrollo de plataformas (back end) e interfaces de usuario web,
                       orientados a la recopilación de datos, análisis y visualización de los mismos.
                     </p>
-                    <p class="text-muted">La naturaleza de los datos procesados por estas plataformas es en el ámbito de
-                      la salud.</p>
+                    <p class="text-muted"> La naturaleza de los datos procesados por estas plataformas es en el ámbito
+                      de la salud.
+                    </p>
+                  </div>
+                </div>
+              </li>
+            </ul>
+            <hr class="divider">
+          </div>
+
+
+
+          <div id="page-2" class="page two">
+            <h3 class="heading pt-4 pb-2">Estudios Oficiales </h3>
+            <ul class="timeline pb-lg-4">
+              <li class="timeline-inverted">
+                <div class="timeline-image">
+                  <a href="https://www.uned.es/" target="_blank">
+                    <img class="rounded-circle img-fluid" src="img/logos/uned.png"
+                      alt="Universidad Nacional de Educación a Distancia">
+                  </a>
+                </div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h5 class="timeline-title">Máster Universitario en Ingeniería y Ciencia de Datos</h5>
+                    <span class="timeline-company">Universidad Nacional de Educación a Distancia (2020 - actualidad)
+                    </span>
+                  </div>
+                  <div class="timeline-body">
+                    <p class="text-muted"> Desarrollo de procedimientos de analítica de datos e implementación de
+                      soluciones de aprendizaje máquina sobre entornos de gestión de datos masivos (Big Data).
+                    </p>
                   </div>
                 </div>
               </li>
               <li class="timeline-inverted">
                 <div class="timeline-image">
                   <a href="https://esi.uclm.es/" target="_blank">
-                  <img class="rounded-circle img-fluid" src="img/logos/euroinf_uclm.png" alt="esi-uclm">
+                    <img class="rounded-circle img-fluid" src="img/logos/uclm.jpg" alt="esi-uclm">
                   </a>
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h3 class="timeline-title">Grado en Ingeniería Informática</h3>
-                    <span class="timeline-company">Universidad de Castilla La Mancha - 2016 - 2020</span>
+                    <h5 class="timeline-title">Grado en Ingeniería Informática</h5>
+                    <span class="timeline-company">Universidad de Castilla La Mancha (2016 - 2020)</span>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted">Escuela Superior de Informática de Ciudad Real, con Sello de excelencia
-                      EURO-INF. </p>
-                    <p class="text-muted">Intensificación en Tecnologías de la Información</p>
-                    <p class="text-muted">Nota media 8.80</p>
+                    <p class="text-muted">Escuela Superior de Informática de Ciudad Real, con <b> Sello de excelencia
+                        EURO-INF</b>. Intensificación en Tecnologías de la Información.</p>
+                    <p class="text-muted">Nota media: 9.02</p>
                   </div>
                 </div>
               </li>
@@ -245,8 +275,8 @@
                 </div>
                 <div class="timeline-panel">
                   <div class="timeline-heading">
-                    <h3 class="timeline-title">Bachillerato Tecnológico</h3>
-                    <span class="timeline-company">IES Berenguela de Castilla - 2014 - 2016</span>
+                    <h5 class="timeline-title">Bachillerato Tecnológico</h5>
+                    <span class="timeline-company">IES Berenguela de Castilla (2014 - 2016)</span>
                   </div>
                   <div class="timeline-body">
                     <p class="text-muted">Mención de "Matrícula de Honor"</p>
@@ -362,6 +392,13 @@
                 <li><span class="year">Octubre 2019</span>
                   <ul class="content">
                     <li>Tercer premio Hackathon 'Santa Tecla' 2019</li>
+                  </ul>
+                </li>
+                <li><span class="year">Enero 2020</span>
+                  <ul class="content">
+                    <li>Matrícula de Honor en Multimedia</li>
+                    <li>Matrícula de Honor en Comercio Electrónico</li>
+                    <li>Matrícula de Honor en Tecnologías y Sistemas Web</li>
                   </ul>
                 </li>
               </ul>
@@ -629,6 +666,26 @@
                 <span class="progressbar progressblue" id="progress-spring"></span>
               </div>
             </li>
+            <!--
+
+            
+            <li>
+              <div class="progressbar-title">
+                <div class="row">
+                  <div class="col-9">
+                    <h5>Ruby on Rails</h5>
+                    <img class="img-fluid" src="img/technologies/rails.png" alt="rails">
+                  </div>
+                  <div class="col-3">
+                    <span class="percent" id="spring-pourcent"></span>
+                  </div>
+                </div>
+              </div>
+              <div class="bar-container">
+                <span class="progressbar progressred" id="progress-rails"></span>
+              </div>
+            </li>
+            -->
           </ul>
         </div>
       </div>
@@ -820,7 +877,55 @@
         <button class="btn" onclick="filterSelection('escritorio')"> Escritorio</button>
       </div>
 
+
       <div class="row">
+
+
+        <div class="col-lg-4 col-sm-6 mb-4 portfolio-item filterDiv web">
+          <div class="card h-100">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModalPequenosLuchadores">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fas fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/web-pequenos.png" alt="">
+            </a>
+            <div class="card-body">
+              <h4 class="card-title">
+                Web Pequeños Luchadores
+              </h4>
+              <p class="card-date">Enero, 2020</p>
+              <hr class="divider">
+              <p class="card-text">Mejora de la presencia en Internet de la Asociación de Familias de Prematuros de
+                Ciudad Real, Pequeños Luchadores.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-sm-6 mb-4 portfolio-item filterDiv web">
+          <div class="card h-100">
+            <a class="portfolio-link" data-toggle="modal" href="#portfolioModalApalabreitor">
+              <div class="portfolio-hover">
+                <div class="portfolio-hover-content">
+                  <i class="fas fa-plus fa-3x"></i>
+                </div>
+              </div>
+              <img class="img-fluid" src="img/portfolio/apalabreitor.png" alt="">
+            </a>
+            <div class="card-body">
+              <h4 class="card-title">
+                Apalabreitor
+              </h4>
+              <p class="card-date">Enero, 2020</p>
+              <hr class="divider">
+              <p class="card-text"> Implementación de una aplicación web (cliente-servidor) que ofrece a los usuarios la
+                posibilidad de jugar a un juego tipo Apalabrados, un juego de tablero de dos contra dos que consiste en
+                formar palabras cruzadas.</p>
+            </div>
+          </div>
+        </div>
+
         <div class="col-lg-4 col-sm-6 mb-4 portfolio-item filterDiv movil">
           <div class="card h-100">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModalLandmarkFinder">
@@ -845,6 +950,8 @@
             </div>
           </div>
         </div>
+
+
         <div class="col-lg-4 col-sm-6 mb-4 portfolio-item filterDiv web">
           <div class="card h-100">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModalElmCalculator">
@@ -866,6 +973,9 @@
             </div>
           </div>
         </div>
+
+
+
         <div class="col-lg-4 col-sm-6 mb-4 portfolio-item filterDiv movil">
           <div class="card h-100">
             <a class="portfolio-link" data-toggle="modal" href="#portfolioModalFoodFinder">
@@ -1066,7 +1176,9 @@
 
                 </p>
                 <ul class="list-inline">
-                  <li>Fecha: Diciembre 2019</li>
+                  <li><b>Fecha:</b> Diciembre 2019</li>
+                  <li><b>Otros participantes:</b> Francisco de la Mata</li>
+                  <li><b>Tecnologías:</b> Flutter, Android Studio, Firebase ML Kit</li>
                 </ul>
 
                 <img src="img/portfolio/workInProgress.png" style="height: 8em;" alt="work in progress">
@@ -1080,8 +1192,91 @@
     </div>
   </div>
 
+  <!-- Modal Pequeños Luchadores -->
+  <div class="portfolio-modal modal fade" id="portfolioModalPequenosLuchadores" tabindex="-1" role="dialog"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="container">
+          <div class="row">
+            <img class="d-block w-100" src="img/portfolio/web-pequenos.png" alt="landmark finder">
 
-  <!-- Modal 2 -->
+            <div class="col">
+              <div class="modal-body">
+
+                <h2>Web Pequeños Luchadores</h2>
+                <p class="item-intro text-muted">Aplicación web</p>
+                <p>Mejora de la presencia en Internet de la Asociación de Familias de Prematuros de Ciudad Real,
+                  Pequeños Luchadores.
+                </p>
+                <p>
+                  Esta web es el resultado del trabajo práctico realizado durante el curso 2019/20 por los alumnos de la
+                  asignatura
+                  Comercio Electrónico del cuarto curso de la Intensificación de Tecnologías de la Información del Grado
+                  en Ingeniería
+                  Informática en la Escuela Superior de Informática de la Universidad de Castilla-La Mancha.
+                </p>
+                <p>
+                  <a href="https://serglezv.neocities.org/ELM-Calculator/index.html" target="_blank">¡Visita la web!</a>
+                </p>
+                <ul class="list-inline">
+                  <li>Fecha: Enero 2020</li>
+                  <li><b>Otros participantes:</b> Francisco de la Mata, Gabriel Calvo, Adrián Incertis</li>
+                  <li><b>Tecnologías:</b> Prestashop, Google Analytics, HTML5, CSS, PHP</li>
+                </ul>
+                <button class="btn btn-close" data-dismiss="modal" type="button">
+                  <i class="fas fa-times"></i></button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- Modal Apalabreitor -->
+  <div class="portfolio-modal modal fade" id="portfolioModalApalabreitor" tabindex="-1" role="dialog"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+      <div class="modal-content">
+        <div class="container">
+          <div class="row">
+            <img class="d-block w-100" src="img/portfolio/apalabreitor.png" alt="landmark finder">
+
+            <div class="col">
+              <div class="modal-body">
+
+                <h2>Apalabreitor</h2>
+                <p class="item-intro text-muted">Aplicación web</p>
+                <p>Implementación de una aplicación web (cliente-servidor) que ofrece a los usuarios la posibilidad de
+                  jugar a un juego tipo Apalabrados, un juego de tablero de dos contra dos que consiste en formar
+                  palabras cruzadas.
+                </p>
+                <p>
+                  Trabajo de prácticas de la asignatura Tecnologías y Sistemas Web.
+                </p>
+                <ul class="list-inline">
+                  <li>Fecha: Enero 2020</li>
+                  <li><b>Otros participantes:</b> Francisco de la Mata</li>
+                  <li><b>Tecnologías:</b> Spring, HTML5, CSS3, JavaScript, JQuery, Bootstrap</li>
+                </ul>
+                <a class="btn btn-git" href="https://github.com/SergioGonzalezVelazquez/apalabrados-tsw"
+                  target="_blank">
+                  <i class="fab fa-github"></i>
+                  Ver repositorio</a>
+                <button class="btn btn-close" data-dismiss="modal" type="button">
+                  <i class="fas fa-times"></i></button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- Modal ELM Calculator -->
   <div class="portfolio-modal modal fade" id="portfolioModalElmCalculator" tabindex="-1" role="dialog"
     aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
@@ -1107,6 +1302,7 @@
                 </p>
                 <ul class="list-inline">
                   <li>Fecha: Julio 2019</li>
+                  <li><b>Tecnologías:</b> ELM, Bootstrap</li>
                 </ul>
                 <a class="btn btn-git" href="https://github.com/SergioGonzalezVelazquez/ElmCalculator" target="_blank">
                   <i class="fab fa-github"></i>
@@ -1154,6 +1350,7 @@
                 <p><a href="https://serglezv.neocities.org/ELM-Calculator/index.html" target="_blank"></a></p>
                 <ul class="list-inline">
                   <li>Fecha: Junio 2019</li>
+                  <li><b>Tecnologías:</b> Flutter, Firebase, MySQL, PHP</li>
                 </ul>
 
                 <a class="btn btn-git" href="https://github.com/SergioGonzalezVelazquez/FoodFinder" target="_blank">
@@ -1203,6 +1400,7 @@
                   cardíacas concretas.</p>
                 <ul class="list-inline">
                   <li>Fecha: Abril 2019</li>
+                  <li><b>Tecnologías:</b> Android Studio, SQLite</li>
                 </ul>
 
 
@@ -1250,6 +1448,7 @@
                 <p><a href="https://serglezv.neocities.org/ELM-Calculator/index.html" target="_blank"></a></p>
                 <ul class="list-inline">
                   <li>Fecha: Junio 2019</li>
+                  <li><b>Tecnologías:</b> HTML5, CSS3, Javascript, Bootstrap</li>
                 </ul>
 
                 <a class="btn btn-git"
